fixes stacking z-index of animation to work with both tempalates  🐿 v2.10.1

--- a/styles/_animation.scss
+++ b/styles/_animation.scss
@@ -2,17 +2,17 @@
 
 	.fade-0 {
 		opacity: 0;
-		z-index: 1;
+		z-index: 300;
 		animation: fade 20s 2s infinite;
 	}
 	.fade-1 {
 		opacity: 0;
-		z-index: 0;
+		z-index: 200;
 		animation: fade 20s 6s infinite;
 	}
 	.fade-2 {
 		opacity: 1;
-		z-index: -1;
+		z-index: 100;
 	}
 
 	.paused {
