--- a/styles/_inarticle_dark.scss
+++ b/styles/_inarticle_dark.scss
@@ -63,13 +63,13 @@
 .event-promo__details {
 	background-color: rgba(38, 42, 51, 0.9);
 	color: getColor('white');
-	z-index: 4;
+	z-index: 400;
 	padding: $ep-standard-space;
 	display: flex;
 	flex-flow: column;
 	justify-content: space-between;
 
-	a:hover {
+	a	:hover {
 		color: #c5cbd4;
 	}
 
@@ -226,7 +226,7 @@
 
 	.event-promo__control {
 		cursor: pointer;
-		z-index:2;
+		z-index:500;
 		border-radius: 22px;
 		height: 44px;
 		width: 44px;
