--- a/styles/_inarticle_light.scss
+++ b/styles/_inarticle_light.scss
@@ -173,31 +173,31 @@
 	@include oGridRespondTo($until: S) {
 		align-self: flex-end;
 	}
+}
 
-	.event-promo-animation {
+.event-promo-animation {
 
-		.event-promo__control {
-			cursor: pointer;
-			z-index:2;
-			border-radius: 22px;
-			height: 44px;
-			width: 44px;
-			top: 8px;
-			right: 8px;
-			display: inarticle-block;
-			background-repeat: no-repeat;
-			background-size: 70%;
-			background-position: center;
-			background-color: transparent;
-			vertical-align: baseline;
-			background-image: url(https://www.ft.com/__origami/service/image/v2/images/raw/fticon-v1:pause?source=o-icons&tint=%23FFFFFF,%23FFFFFF&format=svg);
-			position: absolute;
-			color: getColor('white');
-			background-color: rgba(38, 42, 51, 0.4);
-		}
+	.event-promo__control {
+		cursor: pointer;
+		z-index:500;
+		border-radius: 22px;
+		height: 44px;
+		width: 44px;
+		top: 8px;
+		right: 8px;
+		display: inarticle-block;
+		background-repeat: no-repeat;
+		background-size: 70%;
+		background-position: center;
+		background-color: transparent;
+		vertical-align: baseline;
+		background-image: url(https://www.ft.com/__origami/service/image/v2/images/raw/fticon-v1:pause?source=o-icons&tint=%23FFFFFF,%23FFFFFF&format=svg);
+		position: absolute;
+		color: getColor('white');
+		background-color: rgba(38, 42, 51, 0.4);
+	}
 
-		.event-promo__control--paused {
-			background-image: url(https://www.ft.com/__origami/service/image/v2/images/raw/fticon-v1:play?source=o-icons&tint=%23FFFFFF,%23FFFFFF&format=svg);
-		}
+	.event-promo__control--paused {
+		background-image: url(https://www.ft.com/__origami/service/image/v2/images/raw/fticon-v1:play?source=o-icons&tint=%23FFFFFF,%23FFFFFF&format=svg);
 	}
 }
